doc: GET /openings
